--- a/package.json
+++ b/package.json
@@ -65,10 +65,13 @@
   "dependencies": {
     "bootstrap": "^4.5.0",
     "bootstrap-icons": "^1.8.3",
+    "bootstrap-input-spinner": "^2.2.0",
     "bootstrap-select": "^1.13.18",
     "html-webpack-plugin": "^5.5.0",
     "jquery": "^3.6.0",
+    "photoswipe": "^5.3.2",
     "popper.js": "^1.16.1",
+    "swiper": "^8.3.2",
     "webpack-cli": "^4.9.1"
   }
 }
