--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "WordPress",
     "Theme"
   ],
+  "scripts": {
+    "build": "webpack --env production",
+    "dev": "webpack --env watch",
+    "svg": "gulp svg"
+  },
   "browserslist": [
     "> 0.25%, not dead"
   ],
@@ -33,8 +38,12 @@
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-clean": "^0.4.0",
+    "gulp-inject": "^5.0.5",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-svg-sprites": "^4.1.2",
+    "gulp-svgmin": "^4.1.0",
     "rtlcss": "^3.5.0",
     "sass": "^1.52.3",
     "sass-loader": "^13.0.0",
@@ -56,10 +65,6 @@
     },
     "plugins": [],
     "map": false
-  },
-  "scripts": {
-    "build": "webpack --env production",
-    "dev": "webpack --env watch"
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
