--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babelify": "^10.0.0",
     "browserify": "^17.0.0",
     "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^5.0.0",
     "dir-archiver": "^1.1.1",
     "eslint": "^8.17.0",
     "gulp": "^4.0.2",
@@ -44,6 +45,7 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-svg-sprites": "^4.1.2",
     "gulp-svgmin": "^4.1.0",
+    "mini-css-extract-plugin": "^2.7.5",
     "rtlcss": "^3.5.0",
     "sass": "^1.52.3",
     "sass-loader": "^13.0.0",
